# connect-four-ai

./: .gitignore  README.md  index.html  package-lock.json
.github/workflows/: deploy.yml
crates/: Cargo.toml
crates/cli/: Cargo.toml
crates/cli/src/: main.rs
crates/core/: Cargo.toml  README.md
crates/core/src/: lib.rs  solver.rs  utils.rs
crates/core/src/board/: mod.rs  position.rs  position_parsing_error.rs
crates/core/src/engine/: ai_player.rs  mod.rs  move_sorter.rs  opening_book.rs  opening_book_generator.rs  solver.rs  transposition_table.rs
crates/core/src/types/: mod.rs  move_sorter.rs  opening_book.rs  position.rs  position_parsing_error.rs  transposition_table.rs
crates/python/: Cargo.toml  README.md  connect_four_ai.pyi  pyproject.toml
crates/python/src/: ai_player.rs  lib.rs  position.rs  solver.rs
crates/test-data/: begin-hard-small
crates/wasm/: Cargo.toml  README.md  index.html  package.json
crates/wasm/src/: ai_player.rs  lib.rs  position.rs  solver.rs
python-demo/: README.md  pyproject.toml
python-demo/src/connect_four/: board.py  game.py  main.py
web-demo/: package.json
