[project]
name = "connect-four"
version = "0.1.0"
description = "A Pygame implementation of Connect Four against an AI opponent."
readme = "README.md"
authors = [
    { name = "Benjamin Rall", email = "benr2508@aol.com" }
]
requires-python = ">=3.13"
dependencies = [
    "pygame>=2.6.1",
]

[project.scripts]
connect-four = "connect_four.main:main"

[tool.hatch.build.targets.wheel]
packages = ["src/connect_four"]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
