[package]
name = "connect-four-ai"
version = "0.1.1"
edition = "2021"
description = "A high-performance Rust library for a perfect Connect Four AI solver."
license = "MIT"
repository = "https://github.com/benjaminrall/connect-four-ai"
homepage = "https://github.com/benjaminrall/connect-four-ai"
readme = "README.md"

[dependencies]
rand = "0.9.2"
serde = { version = "1.0.219", features = ["derive"] }
bincode = "1.3.3"
rayon = "1.10.0"
indicatif = { version = "0.18.0", features = ["rayon"] }