[package]
name = "connect-four-ai"
version = "0.1.3"
edition = "2021"
description = "A high-performance Rust implementation of a perfect Connect Four solver."
authors = ["Benjamin Rall <benr2508@aol.com>"]
license = "MIT"
repository = "https://github.com/benjaminrall/connect-four-ai"
homepage = "https://github.com/benjaminrall/connect-four-ai"
readme = "README.md"

[dependencies]
rand = "0.9.2"
serde = { version = "1.0.219", features = ["derive"] }
bincode = "1.3.3"
rayon = "1.10.0"
indicatif = { version = "0.18.0", features = ["rayon"] }