[package]
name = "connect-four-ai-python"
version = "0.1.3"
edition = "2021"
description = "Python bindings for a high-performance implementation of a perfect Connect Four solver."
authors = ["Benjamin Rall <benr2508@aol.com>"]
license = "MIT"
repository = "https://github.com/benjaminrall/connect-four-ai"
homepage = "https://github.com/benjaminrall/connect-four-ai"
readme = "README.md"

[lib]
name = "connect_four_ai"
crate-type = ["cdylib"]

[dependencies]
pyo3 = { version = "0.25.1", features = ["extension-module"] }
connect-four-ai = { path = "../core" }