[project]
name = "connect-four-ai"
version = "0.1.0"
description = "A high performance library for a perfect Connect Four AI solver, written in Rust."
readme = "README.md"
authors = [
    { name = "benjaminrall", email = "benr2508@aol.com"},
]
requires-python = ">=3.12"
classifiers = [
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
]

[build-system]
requires = ["maturin>=1.0,<2.0"]
build-backend = "maturin"
