[project]
name = "connect-four-ai"
version = "0.1.3"
description = "A high performance implementation of a perfect Connect Four solver, written in Rust."
readme = "README.md"
authors = [
    { name = "Benjamin Rall", email = "benr2508@aol.com" }
]
requires-python = ">=3.8"
classifiers = [
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Operating System :: OS Independent",
]

[project.urls]
Homepage = "https://github.com/benjaminrall/connect-four-ai"

[build-system]
requires = ["maturin>=1.0,<2.0"]
build-backend = "maturin"